fixed models overflow issue

--- a/resources/modules/admin/src/sass/admin-style.scss
+++ b/resources/modules/admin/src/sass/admin-style.scss
@@ -84,7 +84,7 @@
         top: 44px;
         left: 0;
         right: 0;
-        bottom: 0;
+        // bottom: 0;
         background-color: $dark-purple;
         transform: translate(100%, 0);
         transition-duration: 0.3s;
